--- a/index.html
+++ b/index.html
@@ -150,32 +150,58 @@
               <!-- =======================
                    VISTA 1: CONTACTOS
               ======================== -->
-              <section class="contactView">
+              <section class="contactView contactView--datos">
+                
                 <h2>CONTACTO</h2>
                 <p class="sub">Escríbenos o revisa nuestros datos de contacto.</p>
 
-                <div class="contactCards">
-                  <div class="contactItem">
-                    <strong><i class="fa-solid fa-phone" aria-hidden="true"></i> Teléfono</strong>
-                    <div>+51 999 999 999</div>
+                <div class="contactGrid">
+
+                  <div class="contactCard contactCard--info">
+                    <div class="contactCards">
+                      <div class="contactItem">
+                        <strong><i class="fa-solid fa-phone" aria-hidden="true"></i> Teléfono</strong>
+                        <div>+51 959 743 755</div>
+                      </div>
+
+                      <div class="contactItem">
+                        <strong><i class="fa-solid fa-envelope" aria-hidden="true"></i> Correo</strong>
+                        <div>yfranco@yjpublicidad.pe</div>
+                      </div>
+
+                      <div class="contactItem">
+                        <strong><i class="fa-solid fa-location-dot" aria-hidden="true"></i> Dirección</strong>
+                        <div>Lopez de La Romaña 268</div>
+                      </div>
+                    </div>
+
+                    <div class="contactActions">
+                      <button class="btn" id="btnPideCotizacion" type="button">
+                        <i class="fa-solid fa-paper-plane" aria-hidden="true"></i>
+                        <span>Pide tu cotización</span>
+                      </button>
+                      <a class="btn whatsapp" href="https://wa.me/51959743755?text=Hola%20YJ%20Publicidad%2C%20quisiera%20una%20cotizaci%C3%B3n" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-whatsapp" aria-hidden="true"></i>
+                        <span>WhatsApp</span>
+                      </a>
+                    </div>
+
                   </div>
 
-                  <div class="contactItem">
-                    <strong><i class="fa-solid fa-envelope" aria-hidden="true"></i> Correo</strong>
-                    <div>arte1@yjpublicidad.pe</div>
+                  <div class="contactCard contactCard--map">
+                    <div class="miniMap">
+                      <iframe
+                        src="https://www.google.com/maps?q=Lopez%20de%20La%20Roma%C3%B1a%20268&z=16&output=embed"
+                        loading="lazy"
+                        allowfullscreen
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="map-caption">
+                      <strong>Ubicación de oficina</strong>
+                      <span>Lopez de La Romaña 268</span>
+                    </div>
                   </div>
 
-                  <div class="contactItem">
-                    <strong><i class="fa-solid fa-location-dot" aria-hidden="true"></i> Dirección</strong>
-                    <div>Tu dirección aquí</div>
-                  </div>
-                </div>
-
-                <div class="contactActions">
-                  <button class="btn" id="btnPideCotizacion" type="button">
-                    <i class="fa-solid fa-arrow-right" aria-hidden="true"></i>
-                    <span>Pide tu cotización</span>
-                  </button>
                 </div>
               </section>
 
